--- a/app/views/appellant-submission/v12/full/task-list.html
+++ b/app/views/appellant-submission/v12/full/task-list.html
@@ -119,7 +119,7 @@
           <li class="app-task-list__item">
             <span class="app-task-list__task-name">
               <a href="claiming-costs">
-                Upload an application for appeal costs
+                Upload a claim for costs
               </a>
             </span>
             {% if data["appealsub-"+version+"-taskliststatus-claimingcosts"] == "Complete" %}
