--- a/app/views/appellant-submission/v12/full/claiming-costs/index.html
+++ b/app/views/appellant-submission/v12/full/claiming-costs/index.html
@@ -25,92 +25,78 @@
       <form action="" method="post">
 
         <span class="govuk-caption-l">
-          Upload an application for appeal costs
+          Upload a claim for costs
         </span>
         <h1 class="govuk-heading-l">
-          [Application for an award of appeal costs]
+          Claiming planning appeal costs
         </h1>
 
-        <!--p class="govuk-body">
-          Your appeal statement explains why you think the local planning department's decision was incorrect.
+        <p class="govuk-body">
+          You can claim costs if someone involved in your planning appeal behaves unreasonably and costs you money. Any costs you claim must be directly related to your appeal.
         </p>
         <p class="govuk-body">
-          If you refer to any documents in your appeal statement, for example photographs, you can upload them in the next step.
+          You can submit a claim now, or by emailing your case officer during your appeal.
         </p>
         <p class="govuk-body">
-          You cannot include any sensitive information in your statement. If you do, you'll be asked to resubmit, which will delay your appeal.
-        </p-->
+          Find out more about <a href="javascript:preventDefault();" target="_blank">claiming planning appeal costs (opens in a new window or tab)</a>.
+        </p>
 
-<!--
-        {% set sensitiveHtml %}
-          <h3 class="govuk-heading-m">
-            Use of language and sensitive information
-          </h3>
+        {% set uploadHtml %}
           <p class="govuk-body">
-            Your statement must not include racist, inflammatory or abusive language.
+            Your document must explain the unreasonable behaviour and how it cost you money.
           <p>
           <p class="govuk-body">
-            Do not include sensitive information in your statement, as you'll be asked to resubmit and this will delay your appeal.
+            You do not need to include a detailed breakdown of the costs or receipts.
+          <p>
+        {% endset -%}
+
+        
+
+        {% if data["appealsub-"+version+"-claimingcosts"] and data["appealsub-"+version+"-claimingcosts"] != "" %}
+          <h3 class="govuk-heading-m govuk-!-margin-top-8">
+            Uploaded document
+          </h3>
+          <p class="govuk-body govuk-!-margin-bottom-8">
+            <a href="javascript:preventDefault();" class="govuk-link">{{ data["appealsub-"+version+"-claimingcosts"] }}</a>
+          </p>
+        {% endif %}
+
+        <div class="govuk-form-group">
+          <label class="govuk-label govuk-label--m" for="appealsub-{{version}}-claimingcosts">
+            {% if data["appealsub-"+version+"-claimingcosts"] and data["appealsub-"+version+"-claimingcosts"] != "" %}
+              Replace the document with details of your claim
+            {% else %}
+              Upload a document with details of your claim
+            {% endif %}
+          </label>
+          <p class="govuk-body">
+            Your document must explain the unreasonable behaviour and how it cost you money.
           </p>
           <p class="govuk-body">
-            Sensitive information refers to:
+            You do not need to include a detailed breakdown of the costs or receipts.
           </p>
-          <ul class="govuk-list govuk-list--bullet">
-            <li>comments from children</li>
-            <li>information relating to children</li>
-            <li>information relating to health</li>
-            <li>information relating to crime</li>
-            <li>
-              Any information relating to an individual’s:
-              <ul class="govuk-list govuk-list--bullet">
-                <li>race</li>
-                <li>ethnic origin</li>
-                <li>politics</li>
-                <li>religion</li>
-                <li>trade union membership</li>
-                <li>genetics</li>
-                <li>physical characteristics</li>
-                <li>sex life</li>
-                <li>sexual orientation</li>
-              </ul>
-            </li>
-          </ul>
-        {% endset -%}
-        
-        {{ govukDetails({
-          summaryText: "What is sensitive information?",
-          html: sensitiveHtml
-        }) }}
--->
-        {{ govukFileUpload({
-          id: "appealsub-"+version+"-claimingcosts-appealstatement",
-          name: "appealsub-"+version+"-claimingcosts-appealstatement",
-          label: {
-            classes: "govuk-label--m",
-            text: "Upload a file"
-          }
-        }) }}
-
-        {{ govukInsetText({
-          text: "File size should be no more than 15MB"
-        }) }}
+          <div id="contact-hint" class="govuk-hint">
+            Drag and drop or choose a file
+          </div>
+          <input class="govuk-file-upload pins-file-upload" id="appealsub-{{version}}-claimingcosts" name="appealsub-{{version}}-claimingcosts" type="file">
+        </div>
 
         {{ govukDetails({
-          summaryText: "Help with file formats",
+          summaryText: "Files you can upload",
           html: '
             <p class="govuk-body">
-              Your file must be in one of the following formats:
-            <p>
+              You can upload the following types of file:
+            </p>
             <ul class="govuk-list govuk-list--bullet">
-              <li>pdf</li>
-              <li>doc</li>
-              <li>docx</li>
-              <li>tif</li>
-              <li>tiff</li>
-              <li>jpg</li>
-              <li>jpeg</li>
-              <li>png</li>
+              <li>DOC or DOCX</li>
+              <li>JPG or JPEG</li>
+              <li>PDF</li>
+              <li>PNG</li>
+              <li>TIF or TIFF</li>
             </ul>
+            <p class="govuk-body">
+              Your file must be smaller than 15MB.
+            </p>
           '
         }) }}
 
