Interested parties - comms to search results (first draft)

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -75,6 +75,7 @@
 
                     </div>
                   </details>
+
                   <ul class="govuk-list govuk-list--bullet">
                     <li>
                       <a href="/interested-party/v1/householder-appeal-first-notice">Householder appeal first notice (email)</a>
@@ -85,20 +86,24 @@
 
                     <br>
                     <li>
-                      <!-- <a href="/interested-party/v1/appeals-guidance">Guidance for appeals</a> -->
-                      Guidance for appeals
+                      <a href="/interested-party/v1/guidance">
+                        Guidance for commenting on an appeal
+                      </a>
                     </li>
                     <li>
-                      <!-- <a href="/interested-party/v1/search-for-appeal">Search for an appeal</a> -->
-                      Search for an appeal
+                      <a href="/interested-party/v1/appeal-search">
+                        Search for an appeal
+                      </a>
                     </li>
                     <li>
-                      <!-- <a href="/interested-party/v1/search-for-appeal-results">Results</a> -->
-                      Results
+                      <a href="/interested-party/v1/appeal-search-results">
+                        Appeal results
+                      </a>
                     </li>
                     <li>
-                      <!-- <a href="/interested-party/v1/search-for-appeal-no-results">No results</a> -->
-                      No results
+                      <a href="/interested-party/v1/appeal-search-no-results">
+                        No results
+                      </a>
                     </li>
                     <li>
                       <!-- <a href="/interested-party/v1/appeal">Appeal public/IP view</a> -->
