--- a/app/views/index.html
+++ b/app/views/index.html
@@ -68,11 +68,13 @@
                   <details class="govuk-details" data-module="govuk-details">
                     <summary class="govuk-details__summary">
                       <span class="govuk-details__summary-text">
-                        Jira Tickets (2)
+                        Jira Tickets (4)
                       </span>
                     </summary>
                     <div class="govuk-details__text">
                       <ul class="govuk-list govuk-list-bulleted">
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-3704">AS-3704 Standardise file size and upload fields</a></li>
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-3706">AS-3706 Drag and drop and multiple file uploads to be more obvious</a></li>
                         <li><a href="https://pins-ds.atlassian.net/browse/AS-4053">AS-4053 Addition of procedure questions to Planning Appeal form</a></li>
                         <li><a href="https://pins-ds.atlassian.net/browse/AS-4057">AS-4057 Addition of Costs question to Planning Appeal form</a></li>
                       </ul>
